--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -115,7 +115,7 @@
 											value="Iniciar sesión"
 										/>-->
 										<a
-											href="profile"
+											href="register"
 											tabindex="4"
 											class="pf-c-button pf-m-primary pf-m-block btn-lg"
 											id="kc-login"
